Updated Sign-Up /Login

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,11 @@
       <mat-card-title>Sign Up</mat-card-title>
     </mat-card-header>
 
-    <form class="example-form" #singupn_form="ngForm">
+    <form
+      class="example-form"
+      #signup_form="ngForm"
+      (ngSubmit)="registerUser(signup_form)"
+    >
       <mat-card-content>
         <mat-form-field class="example-full-width">
           <input
@@ -18,6 +22,17 @@
           />
         </mat-form-field>
 
+        <small
+          *ngIf="
+            !!userFirstName.errors &&
+            !!userFirstName.errors.required &&
+            userFirstName.touched
+          "
+          class="error-message"
+        >
+          First Name is required
+        </small>
+
         <mat-form-field class="example-full-width">
           <input
             matInput
@@ -25,10 +40,21 @@
             type="text"
             name="userLastName"
             ngModel
-            #userFirstName="ngModel"
+            #userLastName="ngModel"
             required
           />
         </mat-form-field>
+
+        <small
+          *ngIf="
+            !!userLastName.errors &&
+            !!userLastName.errors.required &&
+            userLastName.touched
+          "
+          class="error-message"
+        >
+          Last Name is required
+        </small>
 
         <mat-form-field class="example-full-width">
           <input
@@ -39,12 +65,17 @@
             ngModel
             #userName="ngModel"
             required
-            [class.is-invalid]="userName.invalid && userName.touched"
           />
-          <!-- <small [class.d-none]="userName.valid || userName.untouched"
-            >Username is mandatory</small
-          > -->
         </mat-form-field>
+
+        <small
+          *ngIf="
+            !!userName.errors && !!userName.errors.required && userName.touched
+          "
+          class="error-message"
+        >
+          Username is required
+        </small>
 
         <mat-form-field class="example-full-width">
           <input
@@ -55,8 +86,21 @@
             ngModel
             #userEmail="ngModel"
             required
+            autocomplete="off"
+            email="true"
           />
         </mat-form-field>
+
+        <small
+          *ngIf="
+            !!userEmail.errors &&
+            !!userEmail.errors.required &&
+            userEmail.touched
+          "
+          class="error-message"
+        >
+          Email is required
+        </small>
 
         <mat-form-field class="example-full-width">
           <input
@@ -66,7 +110,6 @@
             name="password"
             ngModel
             #password="ngModel"
-            pattern="/^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}$/"
             required
           />
         </mat-form-field>
@@ -90,7 +133,7 @@
             ngModel
             #confirmPassword="ngModel"
             required
-            (change)="comaparePassword(confirmPassword.value, password.value)"
+            (input)="comaparePassword(confirmPassword.value, password.value)"
           />
         </mat-form-field>
 
@@ -102,9 +145,16 @@
         </small>
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">
+      <button
+        mat-stroked-button
+        color="accent"
+        class="btn-block"
+        [disabled]="!!signup_form.invalid || !isValidPassword"
+      >
         Register
       </button>
+
+      <a routerLink="/login">Already have Account ? Sign In</a>
     </form>
   </mat-card>
 </div>
