--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -43,7 +43,7 @@ body {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   z-index: 5;
-  max-width: 330px;
+  max-width: 450px;
 }
 
 .box.back {
@@ -91,6 +91,7 @@ body {
 .login-wrapper mat-card-header mat-card-title {
   font-size: 30px;
   margin: 0;
+  padding: 20px;
 }
 
 .login-wrapper .mat-card {
@@ -101,8 +102,15 @@ body {
   border: 1px solid currentColor;
   line-height: 54px;
   background: #fff7fa;
+  margin: 3% 0;
 }
 
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
+}
+
+a {
+  display: block;
+  color: rgb(54, 54, 177);
+  padding: 10px;
 }
