--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
           Username is required
         </small>
 
-        <mat-form-field class="example-full-width">
+        <!-- <mat-form-field class="example-full-width">
           <input
             matInput
             placeholder="Email"
@@ -54,7 +54,7 @@
           class="error-message"
         >
           Please enter valid Email
-        </small>
+        </small> -->
 
         <mat-form-field class="example-full-width">
           <input
@@ -67,51 +67,29 @@
             required
           />
         </mat-form-field>
+        <small
+          *ngIf="
+            !!password.errors && !!password.errors.required && password.touched
+          "
+          class="error-message"
+        >
+          Password is required
+        </small>
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block" type="submit">
+      <button
+        mat-stroked-button
+        color="accent"
+        class="btn-block"
+        type="submit"
+        [disabled]="!!login_form.invalid"
+      >
         Log in
       </button>
 
       <!-- {{ userPassword.untounched }} -->
+      <a href="#">Forgot Password</a>
+      <a routerLink="/signup">New User? Sign Up</a>
     </form>
   </mat-card>
 </div>
-
-<!-- <mat-card>
-    [disabled]="!login_form.valid"
-  <mat-card-title>Login</mat-card-title>
-  <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <p>
-        <mat-form-field>
-          <input
-            type="text"
-            matInput
-            placeholder="Username"
-            formControlName="username"
-          />
-        </mat-form-field>
-      </p>
-
-      <p>
-        <mat-form-field>
-          <input
-            type="password"
-            matInput
-            placeholder="Password"
-            formControlName="password"
-          />
-        </mat-form-field>
-      </p>
-
-      <p *ngIf="error" class="error">
-        {{ error }}
-      </p>
-
-      <div class="button">
-        <button type="submit" mat-button>Login</button>
-      </div>
-    </form>
-  </mat-card-content>
-</mat-card> -->
