--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -35,7 +35,7 @@ body {
   top: 0;
   opacity: 1;
   float: left;
-  padding: 60px 50px 40px 50px;
+  padding: 60px 50px 30px 50px;
   width: 100%;
   background: #fff;
   border-radius: 10px;
@@ -43,7 +43,7 @@ body {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   z-index: 5;
-  max-width: 80%;
+  max-width: 450px;
 }
 
 .box.back {
@@ -72,13 +72,13 @@ body {
 
 .login-wrapper .example-form {
   min-width: 100%;
-  max-width: 100%;
+  max-width: 300px;
   width: 100%;
 }
 
 .login-wrapper .example-full-width,
 .login-wrapper .btn-block {
-  width: 40%;
+  width: 100%;
 }
 
 .login-wrapper mat-card-header {
@@ -91,6 +91,7 @@ body {
 .login-wrapper mat-card-header mat-card-title {
   font-size: 30px;
   margin: 0;
+  padding: 20px;
 }
 
 .login-wrapper .mat-card {
@@ -98,29 +99,18 @@ body {
 }
 
 .login-wrapper .mat-stroked-button {
-  border: 1px solid currentColor;
+  border: 1px solid black;
   line-height: 54px;
   background: #fff7fa;
-  /* align-items: center; */
+  margin: 3% 0;
 }
 
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
 }
 
-/* custom css */
-.mat-form-field {
-  padding-left: 5%;
-  display: inline-block;
-  position: relative;
-  text-align: left;
-  padding-top: 2%;
-}
-
-button {
-  /*Change the width as much as you like, but make sure 
-    margin-left and margin-right + width = 100%*/
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+a {
+  display: block;
+  color: rgb(54, 54, 177);
+  padding: 10px;
 }
