--- a/src/styles.css
+++ b/src/styles.css
@@ -12,4 +12,13 @@ body {
 .error-message {
   color: red;
   float: right;
+  display: block;
+}
+
+.width-25 {
+  width: 25%;
+}
+
+.width-12 {
+  width: 12%;
 }
