Fixed API calls

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="card-top container-fluid">
+<!-- <div class="card-top container-fluid">
   <div class="container d-flex">
     <div class="item">
       <a>
@@ -38,8 +38,8 @@
       </a>
     </div>
   </div>
-</div>
-
+</div> -->
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <ng-container *ngFor="let item of productList | filter: searchKey:'title'">
