--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,9 +18,9 @@
       <span class="fas fa-search search-icon"></span>
     </div>
 
-    <button routerLink="login" class="btn btn-primary">Login</button>
+    <button routerLink="/login" class="btn btn-primary">Login</button>
 
-    <button routerLink="cart" class="btn bty-primary">
+    <button routerLink="/cart" class="btn bty-primary">
       <i class="fas fa-cart-plus cart-icon"></i>
       <div class="badge bg-danger">{{ totalItems }}</div>
     </button>
