--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <app-background-header></app-background-header>
 <!-- Material form login -->
-<h3 *ngIf="showHeading">{{ responseMessgae }}</h3>
+
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <mat-card-header>
@@ -9,6 +9,7 @@
 
     <form
       class="example-form"
+      name="login_form"
       #login_form="ngForm"
       (ngSubmit)="onButtonClick(login_form)"
     >
