--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,10 @@
       <span class="fas fa-search search-icon"></span>
     </div>
 
-    <button routerLink="/login" class="btn btn-primary">Login</button>
+    <button *ngIf="currentUser"><i class="fas fa-user"></i></button>
+    <button *ngIf="!currentUser" routerLink="/login" class="btn btn-primary">
+      Login
+    </button>
 
     <button routerLink="/cart" class="btn bty-primary">
       <i class="fas fa-cart-plus cart-icon"></i>
