Added Blog Component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,5 @@
-<app-background-header></app-background-header>
+<app-header></app-header>
 <!-- Material form login -->
-
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <mat-card-header>
