--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,8 +59,10 @@
           Admin
         </button>
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button ngbDropdownItem routerLink="/admin/userlist">Users</button>
-          <button ngbDropdownItem>Products</button>
+          <button ngbDropdownItem routerLink="../admin/userlist">Users</button>
+          <button ngbDropdownItem routerLink="../admin/productlist">
+            Products
+          </button>
         </div>
       </div>
     </div>
