--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,4 +38,6 @@ body {
 .alert {
   color: red;
 }
-@import "~ngx-toastr/toastr.css";
+
+@import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
