--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- <router-outlet></router-outlet> -->
 
+<app-header></app-header>
 <router-outlet></router-outlet>
+
 <!-- <app-product></app-product> -->
 <!-- <app-login (nameSubmit)="onNameSubmission($event)"></app-login> -->
