--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,1 +1,16 @@
 <p>product-list works!</p>
+<button (click)="createProduct()">Add New Product</button>
+<!-- <app-data-table></app-data-table> -->
+
+<ag-grid-angular
+  style="width: 100%; height: 100%"
+  class="ag-theme-alpine"
+  [rowData]="productList | async"
+  [columnDefs]="displayColumns"
+  [paginationPageSize]="paginationSize"
+  [rowSelection]="'rowSelection'"
+  [pagination]="true"
+  [colResizeDefault]="'shift'"
+  (gridReady)="onGridReady($event)"
+>
+</ag-grid-angular>
