--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -36,11 +36,15 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <i class="fas fa-edit" routerLink="admin / user / edit"></i>
-      <i class="fas fa-trash alert"></i>
+      <!-- [routerLink]="['/user', user.id, 'details']" -->
+      <i class="fas fa-edit" [routerLink]="['../user', element.id, 'edit']"></i>
+      <!-- <i class="fas fa-edit" routerLink="admin / user / edit"></i> -->
+      <i class="fas fa-trash alert" (click)="deleteUser(element.id)"></i>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
+<!-- <data-table></data-table> -->
