--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -41,6 +41,10 @@
 </div> -->
 <app-header></app-header>
 <div class="container">
+  <div *ngIf="isLoading" class="loading-spinner">
+    <h3>please wait</h3>
+    <mat-spinner></mat-spinner>
+  </div>
   <div class="row">
     <ng-container *ngFor="let item of productList | filter: searchKey:'title'">
       <!-- {{ item | json }} -->
@@ -53,9 +57,14 @@
         <h4 class="card-text-align">{{ item.title }}</h4>
         <p class="card-text-align">{{ item.description }}</p>
         <p><strong> Price : </strong> {{ item.price }}</p>
-        <button class="btn btn-primary" (click)="addTocart(item)">
+        <button *ngIf="!item.showQuantity" class="btn btn-primary" (click)="addTocart(item)">
           Add to Cart
         </button>
+        <div *ngIf="item.showQuantity" class="add-to-cart">
+          <button class="btn btn-info" (click)="decreaseQuantityByOne(item)"><i class="fas fa-minus"></i></button>
+          <span class="h5"> {{ item.quantity }} </span>
+          <button class="btn btn-info" (click)="increaseQuantityByOne(item)"><i class="fas fa-plus"></i></button>
+        </div>
       </div>
     </ng-container>
   </div>
