--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,14 @@ body {
 .float-r {
   float: right;
 }
+
+.loading-spinner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
