Fixed css issues

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -38,7 +38,7 @@
           <tbody>
             <tr *ngFor="let item of products; let i = index">
               <td>{{ i + 1 }}</td>
-              <td>{{ item.name }}</td>
+              <td>{{ item.title }}</td>
 
               <td><img class="image-card" src="{{ item.image }}" alt="" /></td>
               <td class="width-25">{{ item.description }}</td>
