--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,5 +39,9 @@ body {
   color: red;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
