--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
         <strong routerLink="/">calKart</strong>
       </i>
 
-      <div class="form-group">
+      <div class="form-group search-bar">
         <input
           type="text"
           placeholder="Search Product"
@@ -15,8 +15,8 @@
           (keyup)="search($event)"
           class="form-control"
         />
+        <span class="fas fa-search search-icon"></span>
       </div>
-      <span class="fas fa-search search-icon"></span>
     </div>
 
     <!-- <button *ngIf="currentUser"><i class="fas fa-user"></i></button>
